--- a/WeixinMPToPDF/packages.config
+++ b/WeixinMPToPDF/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="net46" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net46" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net46" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net46" />
